# artificial-regex

./: .editorconfig  .envrc  .gitignore  .hlint.yaml  .pre-commit-config.yaml  .stan.toml  README.md  artificial-regex.cabal  desc.md  flake.nix  the.regexes
.github/workflows/: check.yaml
.reuse/: dep5
app/: Main.hs
nix/: shell.nix
nix/haskell/overrides/: artificial-regex.nix
scripts/: check  run_cabal2nix
src/: Regex.hs
test/: CountMatched.hs  ParseRegex.hs  SimplifyRegex.hs  Solve.hs  UnparseRegex.hs
